# lazy_mat

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: codecov.yml  workflow.yml
cmake/modules/: git_ver.cmake  version.h.in
src/: CMakeLists.txt  main.cpp  mat.cpp  mat.hpp  mat_ops.hpp  mat_ops.tpp  matrix.cpp  matrix.hpp  op_res.hpp  opr_res.hpp  oprand.cpp  oprand.hpp  stor.cpp  stor.hpp  vec.cpp  vec.hpp
test/: CMakeLists.txt  tests.cpp
